<resources>
    <string name="app_name">交院Eddie</string>
    <string name="mybut">获取新闻</string>
    <string name="bottom_title_news_string">新闻</string>
    <string name="bottom_title_read_string">教务</string>
    <string name="bottom_title_video_string">聊天</string>
    <string name="bottom_title_lamp_string">天气</string>
    <string name="bottom_title_pc_string">我</string>
    <string name="action_settings">Settings</string>


    <string name="menu_settings">设置入学年份</string>
    <string name="menu_logout">退出登录</string>
    <string name="settings_dialog_title">请填写入学年份</string>
    <string name="settings_dialog_confirm">确定</string>
    <string name="settings_dialog_cancel">取消</string>
    <string name="app_title">查询课表或成绩</string>
    <string name="select_time">请选择查询时间</string>
    <string name="school_year">学年</string>
    <string name="term">学期</string>
    <string name="search_schedule">Schedule</string>
    <string name="search_score">Score</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="input_username">请输入帐号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_verificationCode">请输入验证码</string>
    <string name="rememberPassword">记住密码</string>
    <string name="rememberState">保持登录状态</string>
    <string name="verificationCode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>
