<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_blue_light" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_inputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@mipmap/username"
        android:hint="@string/input_username"
        android:inputType="number"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/et_inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@mipmap/password"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_inputVerificationCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:digits="@string/verificationCode"
            android:drawableLeft="@mipmap/verification_code"
            android:hint="@string/input_verificationCode"
            android:maxLength="4"
            android:maxLines="1"/>

        <ImageView
            android:id="@+id/iv_VerificationCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/loading_failed" />

        <ImageView
            android:id="@+id/iv_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@mipmap/reload" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/cb_rememberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/rememberPassword"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_logout"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_login"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>