<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"

                android:layout_height="60dp"
                android:layout_alignParentBottom="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:gravity="bottom">

        <LinearLayout

            android:id="@+id/bottom_new_layout"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/news_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/news_selector_background"
                android:clickable="false"
                android:duplicateParentState="true"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true"
                android:text="@string/bottom_title_news_string"
                android:textColor="@color/bottom_title_text_color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_read_layout"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/read_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/read_selector_background"
                android:clickable="false"
                android:duplicateParentState="true"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true"
                android:text="@string/bottom_title_read_string"
                android:textColor="@color/bottom_title_text_color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_video_layout"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/video_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/video_selector_background"
                android:clickable="false"
                android:duplicateParentState="true"
                android:scaleType="fitXY"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true"
                android:text="@string/bottom_title_video_string"
                android:textColor="@color/bottom_title_text_color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_lamp_layout"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/lamp_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/lamp_selector_background"
                android:clickable="false"
                android:duplicateParentState="true"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true"
                android:text="@string/bottom_title_lamp_string"
                android:textColor="@color/bottom_title_text_color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_pc_layout"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/pc_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/pc_selector_background"
                android:clickable="false"
                android:duplicateParentState="true"
                android:scaleType="fitXY"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true"
                android:text="@string/bottom_title_pc_string"
                android:textColor="@color/bottom_title_text_color"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>